--- a/src/style.css
+++ b/src/style.css
@@ -1,45 +1,115 @@
 @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400;1,900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,700;1,100;1,300&display=swap');
+
 :root {
-	--mainFont: Roboto, Helvetica, Arial, sans-serif;	
+	--mainFont: 'Lato', Roboto, Helvetica, Arial, sans-serif;	
 	--logoFont: "Cedarville Cursive";
+	--descFont: 'Lato', sans-serif;
+
+	--headerBg: #141414;
+	--contentBg: #3b3b3b;
+
+	--imgSize: 400px;
 }
 
 body {
 	padding: 0;
 	margin: 0;
 	display: grid;
-	grid-template-rows: 100px 1fr;
+	grid-template-rows: minmax(100px, 15%) 1fr;
 	font-family: var(--mainFont);
 }
 
 header {
-	background-color: lightblue;
+	background-color: var(--headerBg);
 	display: grid;
-	grid-template-columns: 1fr 6fr;
+	grid-template-columns: repeat(5, 1fr);
 	padding: 12px;
 	align-items: center;
 }
 
 .logo {
+	text-align: center;
 	font-size: 2rem;
 	font-family: var(--logoFont);
+	color: orange;
+	text-shadow: #FC0 1px 0 10px;
 }
 
 nav {
-	display: grid;
-	justify-content: end;
-	grid-template-columns: repeat(auto-fit, 120px);
+	grid-column: 3 / -1;
+	
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: right;
 	gap: 12px;
-	justify-items: end;
 }
 
 button {
+	width: fit-content;
 	padding: 8px 12px;
-	border: 2px white solid;
-	background: gray;
+	border: none;
+	background: inherit;
+	color: white;
+	font-weight: bold;
 }
 
+
 #content {
-	background-color: lightgray;
+	background-color: var(--contentBg);
+	display: grid;
+}
+
+.picture-container {
+	display: grid;
+	justify-items: center;
+
+	grid-template-rows: repeat(auto-fit, minmax(var(--imgSize), 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(var(--imgSize), 1fr));
+	grid-auto-flow: row;
+	padding: 8px;
+}
+
+.description-container {
+	background: black;
+	color: white;
+	text-align: center;
+
+	display: grid;
+	justify-content: center;
+	grid-template-columns: minmax(400px, 70%);
+}
+
+p {
+	font-size: 1.5rem;
+	font-weight: 300;
+	line-height: 2rem;
+	font-style: italic;
+	font-family: var(--descFont);
+}
+
+#learn-more-btn {
+	justify-self: center;
+	border-radius: 0;
+	border: 2px solid white;
+	font-weight: 100;
+}
+
+button:hover {
+	background-color: white;
+	color: black;
+	font-weight: bold;
+}
+
+img {
+	height: var(--imgSize);
+	width: auto;
+}
+
+@media only screen and (max-width: 600px) {
+	nav {
+		grid-column: 2 / -1;
+
+	}
 }
