--- a/src/style.css
+++ b/src/style.css
@@ -17,16 +17,18 @@ body {
 	padding: 0;
 	margin: 0;
 	display: grid;
-	grid-template-rows: minmax(100px, 15%) 1fr;
 	font-family: var(--mainFont);
 }
 
 header {
+	position: fixed;
+	width: 95vw;
 	background-color: var(--headerBg);
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
-	padding: 12px;
 	align-items: center;
+	margin: 12px;
+	padding: 12px;
 }
 
 .logo {
@@ -59,6 +61,7 @@ button {
 #content {
 	background-color: var(--contentBg);
 	display: grid;
+	padding-top: 6rem;
 }
 
 .picture-container {
@@ -69,6 +72,7 @@ button {
 	grid-template-columns: repeat(auto-fit, minmax(var(--imgSize), 1fr));
 	grid-auto-flow: row;
 	padding: 8px;
+	gap: 12px;
 }
 
 .description-container {
@@ -111,5 +115,6 @@ img {
 	nav {
 		grid-column: 2 / -1;
 
+		justify-content: center;
 	}
 }
