--- a/src/style.css
+++ b/src/style.css
@@ -10,10 +10,11 @@
 	--headerBg: #141414;
 	--contentBg: #3b3b3b;
 
-	--imgSize: 400px;
+	--imgSize: 350px;
 }
 
 body {
+	height: 100vh;
 	padding: 0;
 	margin: 0;
 	display: grid;
@@ -61,7 +62,8 @@ button {
 #content {
 	background-color: var(--contentBg);
 	display: grid;
-	padding-top: 6rem;
+	padding-top: min(150px, 40%);
+	align-items: center;
 }
 
 .picture-container {
@@ -82,7 +84,7 @@ button {
 
 	display: grid;
 	justify-content: center;
-	grid-template-columns: minmax(400px, 70%);
+	grid-template-columns: minmax(300px, 70%);
 }
 
 p {
@@ -109,6 +111,7 @@ button:hover {
 img {
 	height: var(--imgSize);
 	width: auto;
+	max-width: 100%;
 }
 
 @media only screen and (max-width: 600px) {
