--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,700;1,100;1,300&display=swap');
 
+@font-face {
+	font-family: 'cursiveFont';
+	src: url('./great-vibes/GreatVibes-Regular.ttf');
+}
+
 :root {
 	--mainFont: 'Lato', Roboto, Helvetica, Arial, sans-serif;	
 	--logoFont: "Cedarville Cursive";
 	--descFont: 'Lato', sans-serif;
+	--cardTitleFont: 'cursiveFont';
 
 	--headerBg: #141414;
 	--contentBg: #3b3b3b;
@@ -55,7 +61,6 @@ button {
 	border: none;
 	background: inherit;
 	color: white;
-	font-weight: bold;
 }
 
 
@@ -64,12 +69,19 @@ button {
 	display: grid;
 	padding-top: min(150px, 40%);
 	align-items: center;
+	gap: 16px;
+}
+
+.picture-container,
+.description-container,
+.cards-container,
+.card-container {
+	display: grid;
+	justify-items: center;
+	justify-content: center;
 }
 
 .picture-container {
-	display: grid;
-	justify-items: center;
-
 	grid-template-rows: repeat(auto-fit, minmax(var(--imgSize), 1fr));
 	grid-template-columns: repeat(auto-fit, minmax(var(--imgSize), 1fr));
 	grid-auto-flow: row;
@@ -82,9 +94,8 @@ button {
 	color: white;
 	text-align: center;
 
-	display: grid;
-	justify-content: center;
 	grid-template-columns: minmax(300px, 70%);
+	padding: 16px;
 }
 
 p {
@@ -95,7 +106,8 @@ p {
 	font-family: var(--descFont);
 }
 
-#learn-more-btn {
+#learn-more-btn,
+.card-btn {
 	justify-self: center;
 	border-radius: 0;
 	border: 2px solid white;
@@ -112,6 +124,59 @@ img {
 	height: var(--imgSize);
 	width: auto;
 	max-width: 100%;
+}
+
+.cards-container {
+	grid-template-rows: repeat(auto-fit, min(var(--imgSize), 1fr));
+	gap: 16px;
+	padding: 0 1.5rem;
+}
+
+.card-container {
+	grid-template-columns: repeat(auto-fit, minmax(var(--imgSize), 1fr));
+	color: white;
+	align-items: center;
+	gap: 16px;
+}
+
+
+
+.card-description {
+	display: grid;
+	grid-template-rows: 50px 1fr 50px;
+
+	border: 2px solid white;
+}
+
+.card-description p {
+	margin: 0;
+}
+
+.cards-container .btn-container {
+	display: flex;
+	gap: 16px;
+	align-items: center;
+}
+
+.btn-container,
+.card-title,
+.card-description {
+
+	padding-left: 16px;
+}
+
+.card-image {
+
+}
+
+.card-title {
+	font-family: var(--cardTitleFont);
+}
+
+.card-btn {
+	min-width: 100px;
+	font-size: 1rem;
+	background-color: black;
 }
 
 @media only screen and (max-width: 600px) {
