--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,700;1,100;1,300&display=swap');
 
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+
 @font-face {
 	font-family: 'cursiveFont';
 	src: url('./great-vibes/GreatVibes-Regular.ttf');
@@ -70,20 +72,25 @@ button {
 	width: fit-content;
 	padding: 8px 12px;
 	border: none;
-	background: inherit;
+	background: black;
 	color: white;
 }
 
+nav button {
+	background: inherit;
+
+}
 
 #content {
 	background-color: var(--contentBg);
-	display: grid;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	padding: min(150px, 40%) 0 50px 0;
 	align-items: center;
 	gap: 1.5rem;
 }
 
-.picture-container,
 .description-container,
 .cards-container,
 .card-container, 
@@ -94,11 +101,12 @@ button {
 }
 
 .picture-container {
-	grid-template-rows: repeat(auto-fit, minmax(var(--imgSize), 1fr));
-	grid-template-columns: repeat(auto-fit, minmax(var(--imgSize), 1fr));
-	grid-auto-flow: row;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 	padding: 8px;
 	gap: 12px;
+	min-width: 90%;
 }
 
 .description-container {
@@ -127,7 +135,7 @@ p {
 
 button:hover,
 .press-title:hover {
-	background-color: white;
+	background: white;
 	color: black;
 	font-weight: bold;
 }
@@ -182,36 +190,44 @@ img {
 }
 
 .card-title,
-.featured-press-title {
+.featured-press-title,
+.section-title {
 	font-family: var(--cardTitleFont);
 	font-size: 2rem;
 }
 
-.card-btn {
+.card-btn,
+.direction-btn {
 	border: none;
 	min-width: 140px;
 	font-size: 1rem;
 	font-weight: 300;
-	background-color: black;
 	font-family: var(--descFont);
 }
 
 .featured-press-container {
+	
 	row-gap: 36px;
 	text-align: center;
-	
-	grid-template-rows: 80px repeat(auto-fit, minmax(100px, 1fr));
+	width: 100%;
+
 	grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-	justify-items: center;
 }
 
 .featured-press-title {
 	grid-column: 1 / -1;
 	align-self: center;
+	justify-self: center;
+}
+
+.press-container {
+	display: grid;
+	justify-items: center;
 }
 
 .press-title {
-	font-size: 1.8rem;
+	width: 350px;
+	font-size: 1.3rem;
 	border: 2px solid white;
 	padding: 8px;
 	font-family: var(--pressTitleFont);
@@ -224,8 +240,9 @@ img {
 	font-weight: 100;
 }
 
-.reservation {
-	background-size: max(70%, 350px), contain;
+.card,
+.direction-container {
+	background-size: max(90%, 400px), contain;
 	background-repeat: no-repeat;
 	background-position: center;
 
@@ -233,23 +250,37 @@ img {
 	align-content: center;
 	justify-items: center;
 	align-items: center;
+}
+
+.card {
+	width: max(80%, 400px);
+	height: max(80%, 400px);
 	grid-template-rows: repeat(2, 100px);
 }
 
-.reservation-text {
+.card-text {
 	font-family: var(--cardTitleFont);
-	font-size: 3rem;
+	font-size: 2rem;
+	background-color: black;
+	opacity: 0.8;
+	width: fit-content;
+	padding: 12px;
 }
 
-.reservation-btn {
-	background: black;
+.card-btn,
+.direction-btn {
 	font-size: 1rem;
 	padding: 16px;
 }
 
-.reservation-btn:hover {
-	background-color: orange;
-	color: white;
+.direction-btn,
+.card .card-btn {
+	background-color: brown;
+}
+
+.direction-btn:hover,
+.card .card-btn:hover {
+	background: white;
 }
 
 .footer {
@@ -268,6 +299,124 @@ img {
 .portfolio-link:hover {
 	color: orange;
 }
+
+.main-picture {
+	width: 80%;
+	height: auto;
+	flex-grow: 1;
+	flex-shrink: 3;
+}
+
+.main-section {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(var(--imgSize), 1fr));
+	padding: 2rem;
+	gap: 2rem;
+}
+
+.information-container,
+.about-container {
+	display: grid;
+	grid-template-rows: 4rem 1fr;
+	text-align: center;
+	gap: 16px;
+	padding: 16px;
+}
+
+.content-container,
+.about-container {
+	font-size: 1.2rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	gap: 16px;
+	padding: 16px;
+}
+
+.section-title {
+	font-size: 3rem;
+}
+
+.contact-info {
+	display: flex;
+	flex-direction: column;
+}
+
+.contact-info a {
+	color: orange;
+	text-decoration: underline;
+}
+
+.contact-info a:hover {
+	color: lightblue;
+	cursor: pointer;
+}
+
+.title-container {
+	font-weight: bold;
+	display: flex;
+	justify-content: center;
+}
+
+.comment {
+	font-weight: normal;
+	font-style: italic;
+}
+
+.comment:before {
+	content: ', ';
+}
+
+.content-container button {
+	align-self: center;
+	padding: 16px 24px;
+}
+
+.media-container {
+	display: grid;
+	grid-template-rows: 1fr 1fr;
+	align-items: center;
+	text-align: center;
+	justify-items: stretch;
+	gap: 12px;
+}
+
+.media-title {
+	font-size: 2rem;
+}
+
+.icon-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 16px;
+
+}
+
+.fa {
+	padding: 10px;
+	font-size: 30px;
+	width: 30px;
+	height: auto;
+	text-align: center;
+	text-decoration: none;
+	border-radius: 50%;
+	background-color: black;
+	color: white;
+}
+
+
+.fa:hover {
+	background-color: white;
+	color: black;
+}
+
+.direction-container {
+	width: 80%;
+	height: 80%;
+	min-height: 400px;
+}
+
 
 @media only screen and (max-width: 600px) {
 	nav {
