--- a/src/style.css
+++ b/src/style.css
@@ -41,13 +41,13 @@ body {
 
 header {
 	position: fixed;
-	width: 95vw;
+	width: 95%;
 	background-color: var(--headerBg);
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
 	align-items: center;
-	margin: 1.2rem;
-	padding: 12px;
+	margin: 1rem;
+	padding: 1rem;
 	border: 2px solid gray;
 }
 
@@ -210,8 +210,9 @@ img {
 	row-gap: 36px;
 	text-align: center;
 	width: 100%;
+	justify-content: center;
 
-	grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
 }
 
 .featured-press-title {
@@ -301,6 +302,7 @@ img {
 }
 
 .main-picture {
+	max-width: 500px;
 	width: 80%;
 	height: auto;
 	flex-grow: 1;
@@ -417,11 +419,86 @@ img {
 	min-height: 400px;
 }
 
+.menu-options {
+	display: flex;
+	flex-direction: column;
+	justify-items: center;
+	align-items: center;
+	gap: 4rem;
+}
+
+.options-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 16px;
+}
+
+.menu-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	justify-items: center;
+	padding: 3rem;
+	gap: 3rem;
+}
+
+.meal-container {
+	flex-basis: 500px;
+	display: flex;
+	flex-direction: column;
+}
+
+.menu-options button {
+	padding: 12px 28px;
+	font-size: 1rem;
+}
+
+.menu-options button:hover {
+	background-color: brown;
+	color: white;
+}
+
+.meal-header {
+	border-bottom: 2px solid white;
+	display:
+}
+
+.meal-comment {
+	text-align: right;
+	font-size: 1.2rem;
+	color: gold;
+}
+
+.items-container {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	padding: 16px;
+}
+
+.item-container {
+	display: inline-block;
+}
+
+.item-title {
+	font-weight: bold;
+	font-size: 1.5rem;
+	font-style: normal;
+}
+
+.item-title::after {
+	content: ' ';
+}
+
+.item-number {
+	font-size: 1.1rem;
+	font-weight: bold;
+}
 
 @media only screen and (max-width: 600px) {
 	nav {
 		grid-column: 2 / -1;
-
 		justify-content: center;
 	}
 }
