--- a/src/style.css
+++ b/src/style.css
@@ -146,7 +146,7 @@ img {
 
 .cards-container {
 	grid-template-rows: repeat(auto-fit, min(var(--imgSize), 1fr));
-	gap: 16px;
+	gap: 2rem;
 	padding: 0 1.5rem;
 	max-width: 800px;
 }
@@ -154,7 +154,7 @@ img {
 .card-container {
 	grid-template-columns: repeat(auto-fit, minmax(var(--imgSize), 1fr));
 	align-items: center;
-	gap: 16px;
+	gap: 2rem;
 }
 
 
@@ -521,6 +521,39 @@ img {
 
 .about-description p {
 	font-size: 1.7rem;
+}
+
+.team-container {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 24px;
+	padding: 18px;
+	justify-content: center;
+	justify-items: center;
+}
+
+
+.employee-container {
+	display: grid; 
+	flex-basis: 300px;
+	grid-template-rows: 1fr 40px;
+	text-align: center;
+}
+
+.employee-image {
+	height: 100%;
+	width: auto;
+	max-width: 100%;
+}
+
+.employee-name {
+	background: white;
+	color: black;
+	font-size: 1.2rem;
+	font-weight: bold;
+	align-self: stretch;
+	display: grid;
+	align-items: center;
 }
 
 @media only screen and (max-width: 600px) {
