--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,7 @@ body {
 	padding: 0;
 	margin: 0;
 	display: grid;
+	grid-template-rows: 1fr min(15%, 50px);
 	font-family: var(--mainFont);
 	color: white;
 }
@@ -616,11 +617,12 @@ img {
 }
 
 form {
-	width: max(50%, 400px);
+	width: min(80%, 350px);
 	display: grid;
 	grid-template-rows: repeat(50px, 4);
 	grid-template-columns: auto;
 	gap: 1rem;
+	padding: 1rem;
 }
 
 form .section-title {
