--- a/src/style.css
+++ b/src/style.css
@@ -1,655 +1,647 @@
-@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400;1,900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,700;1,100;1,300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,700;1,100;1,300&display=swap");
 
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
 @font-face {
-	font-family: 'cursiveFont';
-	src: url('./great-vibes/GreatVibes-Regular.ttf');
+  font-family: "cursiveFont";
+  src: url("./great-vibes/GreatVibes-Regular.ttf");
 }
 
 @font-face {
-	font-family: 'copperplate';
-	src: url('./copperplate/OPTICopperplate-Heavy.otf'),
-		url('./copperplate/OPTICopperplate-Light.otf'),
-		url('./copperplate/OPTICopperplate.otf');		
+  font-family: "copperplate";
+  src: url("./copperplate/OPTICopperplate-Heavy.otf"),
+    url("./copperplate/OPTICopperplate-Light.otf"),
+    url("./copperplate/OPTICopperplate.otf");
 }
 
 :root {
-	--mainFont: 'Lato', Roboto, Helvetica, Arial, sans-serif;	
-	--logoFont: "Cedarville Cursive";
-	--descFont: 'Lato', sans-serif;
-	--cardTitleFont: 'cursiveFont';
-	--pressTitleFont: 'copperplate', 'Lato', serif;
-	--eventNameFont: Roboto;
+  --mainFont: "Lato", Roboto, Helvetica, Arial, sans-serif;
+  --logoFont: "Cedarville Cursive";
+  --descFont: "Lato", sans-serif;
+  --cardTitleFont: "cursiveFont";
+  --pressTitleFont: "copperplate", "Lato", serif;
+  --eventNameFont: Roboto;
 
-	--headerBg: #141414;
-	--contentBg: #3b3b3b;
+  --headerBg: #141414;
+  --contentBg: #3b3b3b;
 
-	--imgSize: 350px;
+  --imgSize: 350px;
 }
 
 body {
-	height: 100vh;
-	padding: 0;
-	margin: 0;
-	display: grid;
-	grid-template-rows: 1fr min(15%, 50px);
-	font-family: var(--mainFont);
-	color: white;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-rows: 1fr min(15%, 50px);
+  font-family: var(--mainFont);
+  color: white;
 }
 
 header {
-	position: fixed;
-	width: 95%;
-	background-color: var(--headerBg);
-	display: grid;
-	grid-template-columns: repeat(5, 1fr);
-	align-items: center;
-	margin: 1rem;
-	padding: 1rem;
-	border: 2px solid gray;
+  position: fixed;
+  width: 95%;
+  background-color: var(--headerBg);
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  align-items: center;
+  margin: 1rem;
+  padding: 1rem;
+  border: 2px solid gray;
 }
 
 .logo {
-	text-align: center;
-	font-size: 2rem;
-	font-family: var(--logoFont);
-	color: orange;
-	text-shadow: #FC0 1px 0 10px;
+  text-align: center;
+  font-size: 2rem;
+  font-family: var(--logoFont);
+  color: orange;
+  text-shadow: #fc0 1px 0 10px;
 }
 
 nav {
-	grid-column: 3 / -1;
-	
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: right;
-	gap: 12px;
+  grid-column: 3 / -1;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: right;
+  gap: 12px;
 }
 
 button {
-	width: fit-content;
-	padding: 8px 12px;
-	border: none;
-	background: black;
-	color: white;
+  width: fit-content;
+  padding: 8px 12px;
+  border: none;
+  background: black;
+  color: white;
 }
 
 nav button {
-	background: inherit;
+  background: inherit;
 }
 
 nav button:last-of-type {
-	background-color: white;
-	color: black;
+  background-color: white;
+  color: black;
 }
 
 nav button:last-of-type:hover {
-	background-color: brown;
-	color: white;
+  background-color: brown;
+  color: white;
 }
 
 #content {
-	background-color: var(--contentBg);
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	padding: min(150px, 40%) 0 50px 0;
-	align-items: center;
-	gap: 1rem;
+  background-color: var(--contentBg);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: min(150px, 40%) 0 50px 0;
+  align-items: center;
+  gap: 1rem;
 }
 
 .description-container,
 .cards-container,
-.card-container, 
+.card-container,
 .featured-press-container {
-	display: grid;
-	justify-items: center;
-	justify-content: center;
+  display: grid;
+  justify-items: center;
+  justify-content: center;
 }
 
 .event-options-container,
 .picture-container {
-	width: 80%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	padding: 8px;
-	gap: 12px;
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 8px;
+  gap: 12px;
 }
 
 .description-container {
-	width: 100vw;
-	background: black;
-	text-align: center;
+  width: 100vw;
+  background: black;
+  text-align: center;
 
-	grid-template-columns: minmax(var(--imgSize), 70%);
-	padding: 48px 16px;
+  grid-template-columns: minmax(var(--imgSize), 70%);
+  padding: 48px 16px;
 }
 
 p {
-	font-size: 1.5rem;
-	font-weight: 300;
-	line-height: 2rem;
-	font-style: italic;
-	font-family: var(--descFont);
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 2rem;
+  font-style: italic;
+  font-family: var(--descFont);
 }
 
 #learn-more-btn,
 .card-btn {
-	justify-self: center;
-	border-radius: 0;
-	border: 2px solid white;
-	font-weight: 100;
+  justify-self: center;
+  border-radius: 0;
+  border: 2px solid white;
+  font-weight: 100;
 }
 
 button:hover,
 .press-title:hover {
-	background: white;
-	color: black;
-	font-weight: bold;
+  background: white;
+  color: black;
+  font-weight: bold;
 }
 
 img {
-	max-width: 400px;
+  max-width: 400px;
 }
 
 .cards-container {
-	width: 80%;
-	grid-template-rows: repeat(auto-fit, min(var(--imgSize), 1fr));
-	grid-template-columns: repeat(auto-fit, min(var(--imgSize), 1fr));
-	gap: 1rem;
-	padding: 0 1.5rem;
+  width: 80%;
+  grid-template-rows: repeat(auto-fit, min(var(--imgSize), 1fr));
+  grid-template-columns: repeat(auto-fit, min(var(--imgSize), 1fr));
+  gap: 1rem;
+  padding: 0 1.5rem;
 }
 
 .card-container {
-	grid-template-columns: repeat(auto-fit, minmax(var(--imgSize), 1fr));
-	align-items: center;
-	gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(var(--imgSize), 1fr));
+  align-items: center;
+  gap: 1rem;
 }
-
 
 .card-description,
 .press-title,
 .gallery-photo {
-	box-shadow: 5px 5px 10px gray;
+  box-shadow: 5px 5px 10px gray;
 }
 
 .card-description {
-	width: 80%;
-	display: grid;
-	grid-template-rows: 70px 1fr 50px;
+  width: 80%;
+  display: grid;
+  grid-template-rows: 70px 1fr 50px;
 
-	border: 2px solid white;
-	padding: 16px;
-	gap: 1rem;
+  border: 2px solid white;
+  padding: 16px;
+  gap: 1rem;
 }
 
 .card-description p {
-	margin: 0;
+  margin: 0;
 }
 
 .cards-container .btn-container {
-	display: grid;
-	grid-template-rows: auto;
-	grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
-	gap: 1rem;
-	align-items: center;
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
+  gap: 1rem;
+  align-items: center;
 }
 
 .card-title,
 .card-description {
-
-	padding-left: 16px;
+  padding-left: 16px;
 }
 
 .card-title,
 .featured-press-title,
 .section-title {
-	font-family: var(--cardTitleFont);
-	font-size: 2rem;
+  font-family: var(--cardTitleFont);
+  font-size: 2rem;
 }
 
 .card-btn,
 .direction-btn {
-	border: none;
-	min-width: 140px;
-	font-size: 1rem;
-	font-weight: 300;
-	font-family: var(--descFont);
+  border: none;
+  min-width: 140px;
+  font-size: 1rem;
+  font-weight: 300;
+  font-family: var(--descFont);
 }
 
-.featured-press-container {	
-	row-gap: 36px;
-	text-align: center;
-	width: 80%;
-	justify-content: center;
+.featured-press-container {
+  row-gap: 36px;
+  text-align: center;
+  width: 80%;
+  justify-content: center;
 
-	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
 .featured-press-title {
-	grid-column: 1 / -1;
-	align-self: center;
-	justify-self: center;
+  grid-column: 1 / -1;
+  align-self: center;
+  justify-self: center;
 }
 
 .press-container {
-	display: grid;
-	justify-items: center;
+  display: grid;
+  justify-items: center;
 }
 
 .press-title {
-	width: 350px;
-	font-size: 1.3rem;
-	border: 2px solid white;
-	padding: 8px;
-	font-family: var(--pressTitleFont);
-	margin-bottom: 8px;
+  width: 350px;
+  font-size: 1.3rem;
+  border: 2px solid white;
+  padding: 8px;
+  font-family: var(--pressTitleFont);
+  margin-bottom: 8px;
 }
 
 .event-name {
-	font-size: 1.2rem;
-	font-family: var(--eventNameFont);
-	font-weight: 100;
+  font-size: 1.2rem;
+  font-family: var(--eventNameFont);
+  font-weight: 100;
 }
 
 .card,
 .direction-container {
-	background-size: max(90%, 400px), contain;
-	background-repeat: no-repeat;
-	background-position: center;
+  background-size: max(90%, 400px), contain;
+  background-repeat: no-repeat;
+  background-position: center;
 
-	display: grid;
-	align-content: center;
-	justify-items: center;
-	align-items: center;
+  display: grid;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
 }
 
 .card {
-	width: max(80%, 400px);
-	height: max(80%, 400px);
-	grid-template-rows: repeat(2, 100px);
+  width: max(80%, 400px);
+  height: max(80%, 400px);
+  grid-template-rows: repeat(2, 100px);
 }
 
 .card-text {
-	font-family: var(--cardTitleFont);
-	font-size: 2rem;
-	background-color: black;
-	opacity: 0.8;
-	width: fit-content;
-	padding: 12px;
+  font-family: var(--cardTitleFont);
+  font-size: 2rem;
+  background-color: black;
+  opacity: 0.8;
+  width: fit-content;
+  padding: 12px;
 }
 
 .card-btn,
 .direction-btn {
-	font-size: 1rem;
-	padding: 16px;
+  font-size: 1rem;
+  padding: 16px;
 }
 
 .direction-btn,
 .card .card-btn {
-	background-color: brown;
+  background-color: brown;
 }
 
 .direction-btn:hover,
 .card .card-btn:hover {
-	background: white;
+  background: white;
 }
 
 .footer {
-	display: grid;
-	justify-items: center;
-	align-items: center;
-	padding: 1rem;	
-	background-color: var(--headerBg);
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  padding: 1rem;
+  background-color: var(--headerBg);
 }
 
 .portfolio-link {
-	text-decoration: none;
-	color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 .portfolio-link:hover {
-	color: orange;
+  color: orange;
 }
 
 .main-picture {
-	width: 80%;
-	height: auto;
-	flex-grow: 1;
-	flex-shrink: 3;
+  width: 80%;
+  height: auto;
+  flex-grow: 1;
+  flex-shrink: 3;
 }
 
 .main-section {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(var(--imgSize), 1fr));
-	padding: 2rem;
-	gap: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(var(--imgSize), 1fr));
+  padding: 2rem;
+  gap: 2rem;
 }
 
 .information-container,
 .about-container {
-	display: grid;
-	grid-template-rows: 4rem 1fr;
-	text-align: center;
-	gap: 16px;
-	padding: 16px;
+  display: grid;
+  grid-template-rows: 4rem 1fr;
+  text-align: center;
+  gap: 16px;
+  padding: 16px;
 }
 
 .content-container,
 .about-container {
-	font-size: 1.2rem;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	gap: 16px;
-	padding: 16px;
+  font-size: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 16px;
+  padding: 16px;
 }
 
 .section-title {
-	font-size: 3rem;
+  font-size: 3rem;
 }
 
 .contact-info {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .contact-info a {
-	color: orange;
-	text-decoration: underline;
+  color: orange;
+  text-decoration: underline;
 }
 
 .contact-info a:hover {
-	color: lightblue;
-	cursor: pointer;
+  color: lightblue;
+  cursor: pointer;
 }
 
 .title-container {
-	font-weight: bold;
-	display: flex;
-	justify-content: center;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
 }
 
 .comment {
-	font-weight: normal;
-	font-style: italic;
+  font-weight: normal;
+  font-style: italic;
 }
 
 .comment:before {
-	content: ', ';
+  content: ", ";
 }
 
 .content-container button {
-	align-self: center;
-	padding: 16px 24px;
+  align-self: center;
+  padding: 16px 24px;
 }
 
 .media-container {
-	display: grid;
-	grid-template-rows: 1fr 1fr;
-	align-items: center;
-	text-align: center;
-	justify-items: stretch;
-	gap: 12px;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
+  text-align: center;
+  justify-items: stretch;
+  gap: 12px;
 }
 
 .media-title {
-	font-size: 2rem;
+  font-size: 2rem;
 }
 
 .icon-container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	gap: 16px;
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
 }
 
 .fa {
-	padding: 10px;
-	font-size: 30px;
-	width: 30px;
-	height: auto;
-	text-align: center;
-	text-decoration: none;
-	border-radius: 50%;
-	background-color: black;
-	color: white;
+  padding: 10px;
+  font-size: 30px;
+  width: 30px;
+  height: auto;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  background-color: black;
+  color: white;
 }
 
-
 .fa:hover {
-	background-color: white;
-	color: black;
+  background-color: white;
+  color: black;
 }
 
 .direction-container {
-	width: 80%;
-	height: 80%;
-	min-height: 400px;
+  width: 80%;
+  height: 80%;
+  min-height: 400px;
 }
 
 .menu-options {
-	width: 80%;
-	display: flex;
-	flex-direction: column;
-	justify-items: center;
-	align-items: center;
-	gap: 1rem;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 .options-container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	gap: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
 }
 
 .menu-container {
-	width: 80%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	justify-items: center;
-	padding: 1rem;
-	gap: 1rem;
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-items: center;
+  padding: 1rem;
+  gap: 1rem;
 }
 
 .meal-container {
-	flex-basis: 500px;
-	display: flex;
-	flex-direction: column;
+  flex-basis: 500px;
+  display: flex;
+  flex-direction: column;
 }
 
 .menu-options button {
-	padding: 12px 28px;
-	font-size: 1rem;
+  padding: 12px 28px;
+  font-size: 1rem;
 }
 
 .menu-options button:hover {
-	background-color: brown;
-	color: white;
+  background-color: brown;
+  color: white;
 }
 
 .meal-header {
-	border-bottom: 2px solid white;
+  border-bottom: 2px solid white;
 }
 
 .meal-comment {
-	text-align: right;
-	font-size: 1.2rem;
-	color: gold;
+  text-align: right;
+  font-size: 1.2rem;
+  color: gold;
 }
 
 .items-container {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-	padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 16px;
 }
 
 .item-container {
-	display: inline-block;
+  display: inline-block;
 }
 
 .item-title {
-	font-weight: bold;
-	font-size: 1.5rem;
-	font-style: normal;
+  font-weight: bold;
+  font-size: 1.5rem;
+  font-style: normal;
 }
 
 .item-title::after {
-	content: ' ';
+  content: " ";
 }
 
 .item-number {
-	font-size: 1.1rem;
-	font-weight: bold;
+  font-size: 1.1rem;
+  font-weight: bold;
 }
 
 .main-card {
-	width: 80%;
-	min-height: 500px;
+  width: 80%;
+  min-height: 500px;
 }
 
 .main-card {
-	align-content: end;
-	
+  align-content: end;
 }
 
 .main-card .section-title {
-	grid-row: 1 / -1;
-	justify-self: left;
-	align-self: end;
-	text-align: center;
-	background-color: var(--contentBg);
-	padding: 1rem 0;
-	width: 80%;
+  grid-row: 1 / -1;
+  justify-self: left;
+  align-self: end;
+  text-align: center;
+  background-color: var(--contentBg);
+  padding: 1rem 0;
+  width: 80%;
 }
 
 .about-description {
-	background-color: inherit;
+  background-color: inherit;
 }
 
 .about-description p {
-	font-size: 1.7rem;
+  font-size: 1.7rem;
 }
 
 .team-container {
-	width: 80%;
-	display: flex;
-	flex-wrap: wrap;
-	gap: 24px;
-	padding: 18px;
-	justify-content: center;
-	justify-items: center;
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  padding: 18px;
+  justify-content: center;
+  justify-items: center;
 }
 
-
 .employee-container {
-	display: grid; 
-	flex-basis: 300px;
-	grid-template-rows: 1fr 40px;
-	text-align: center;
-	justify-items: center;
+  display: grid;
+  flex-basis: 300px;
+  grid-template-rows: 1fr 40px;
+  text-align: center;
+  justify-items: center;
 }
 
 .employee-image {
-	height: 100%;
-	width: auto;
-	max-width: 100%;
-	max-height: 300px;
+  height: 100%;
+  width: auto;
+  max-width: 100%;
+  max-height: 300px;
 }
 
 .employee-name {
-	background: white;
-	color: black;
-	font-size: 1.2rem;
-	font-weight: bold;
-	place-self: stretch;
-	display: grid;
-	align-items: center;
-	padding: 12px;
+  background: white;
+  color: black;
+  font-size: 1.2rem;
+  font-weight: bold;
+  place-self: stretch;
+  display: grid;
+  align-items: center;
+  padding: 12px;
 }
 
-
 .gallery-container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-	gap: 24px;
-	max-width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  max-width: 80%;
 }
 
 .event-guide-btn {
-	border: 2px solid white;
+  border: 2px solid white;
 }
 
 .event-container {
-	display: grid;
-	grid-template-rows: 4fr 1fr;
-	justify-items: center;
-	background: white;
-	color: black;
-	font-weight: bold;
+  display: grid;
+  grid-template-rows: 4fr 1fr;
+  justify-items: center;
+  background: white;
+  color: black;
+  font-weight: bold;
 }
 
 .event-container:hover {
-	opacity: 0.7;
+  opacity: 0.7;
 }
 
 .event-name {
-	display: grid;
-	align-items: center;
+  display: grid;
+  align-items: center;
 }
 
 form {
-	width: min(80%, 350px);
-	display: grid;
-	grid-template-rows: repeat(50px, 4);
-	grid-template-columns: auto;
-	gap: 1rem;
-	padding: 1rem;
+  width: min(80%, 350px);
+  display: grid;
+  grid-template-rows: repeat(50px, 4);
+  grid-template-columns: auto;
+  gap: 1rem;
+  padding: 1rem;
 }
 
 form .section-title {
-	text-align: center;
+  text-align: center;
 }
 
 form label,
 form button {
-	font-size: 1.1rem;
-	font-weight: bold;
+  font-size: 1.1rem;
+  font-weight: bold;
 }
 
 form label span {
-	font-weight: normal;
-	font-style: italic;
+  font-weight: normal;
+  font-style: italic;
 }
 
 form button {
-	width: 100%;
+  width: 100%;
 }
 
 .input-container {
-	display: grid;
-	grid-template-rows: 2fr 3fr; 
-	gap: 5px;
+  display: grid;
+  grid-template-rows: 2fr 3fr;
+  gap: 5px;
 }
 
-
 @media only screen and (max-width: 600px) {
-	nav {
-		grid-column: 2 / -1;
-		justify-content: center;
-	}
+  nav {
+    grid-column: 2 / -1;
+    justify-content: center;
+  }
 
-	img {
-		max-width: 350px;
-	}
+  img {
+    max-width: 350px;
+  }
 }
